# dj-dock-template

./: .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml
.github/scripts/: build.sh
.github/workflows/: workflow-test.yml
backend/: .env.template  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/admin_panel/: views.py
backend/main/: asgi.py  wsgi.py
backend/main/custom/: backend.py  context_processors.py  paginations.py  permissions.py  template_tags.py  viewsets.py
backend/main/helpers/: rds_secrets.py  weekdays.py
backend/main/settings/: __init__.py  base.py  local.py  production.py
backend/main/urls/: client_api.py  dj_admin.py  hosts.py
backend/users/: admin.py  api.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py  0002_auto_20210921_1917.py  0003_auto_20210921_1951.py  0004_auto_20210921_2001.py  0005_auto_20210923_1100.py
db/: .env.template
web/: nginx-proxy.conf  nginx-proxy.prod.conf
